# vehicle_detector

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: VehicleColorClassify.h  classifier.h  define.h  fast_rcnn_test.h  numpy_boost.hpp  numpy_boost_python.hpp  svm-predict.h
models/bing/: ObjNessB2W8MAXBGR.wS1  ObjNessB2W8MAXBGR.wS2
models/color/: car_color_detect.model  topredictoneimage.txt
models/detector/: deploy.prototxt
models/make/: make_labels.txt
models/model/: model_labels.txt
models/type/: type_labels.txt
res/: mainwindow.ui
src/: CMakeLists.txt  VehicleColorClassify.cpp  classifier.cpp  fast_rcnn_test.cpp  main.cpp  svm-predict.c  svm.cpp  test.cpp  vehicle_detector_qt.cpp  vehicle_detector_window.cpp  vehicle_detector_window.h
third-parties/: caffe
third-parties/fast-rcnn/: FRCNN.py  boxes.txt  test.py
third-parties/fast-rcnn/datasets/: factory.py  general_image_data.py
third-parties/fast-rcnn/fast_rcnn/: test.py
third-parties/fast-rcnn/utils/: bbox.c  nms.c
